--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="projects-list">
             <div class="project-card">
                 <h3>Project 1</h3>
-                <p>Short description of the project</p>
+                <p>This is a personal portfolio website showcasing the skills, projects, and experience of Anurag. The website features a clean and modern design with sections for an introduction, portfolio projects, and contact information. It's a one-page responsive layout designed to provide a seamless user experience across all devices, highlighting Anurag's proficiency in web development, design, and creative problem-solving.</p>
                 <a href="#">View Project</a>
             </div>
         </div>
